<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/PASSWORDVERGESSEN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#DDDDDD"
        android:background="#39424d"
        android:padding="10dp"
        android:text="@string/passverg" />


    <EditText
        android:id="@+id/ACCNAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/benutzername"/>

    <EditText
        android:id="@+id/VERGESSEN_PASSWORD1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwort2" />

    <EditText
        android:id="@+id/VERGESSEN_PASSWORD2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwort1" />

    <LinearLayout
        android:id="@+id/BUTTON"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/BUTTONABBRECHEN_PASSWORD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/buttonAbbrechen"
            android:onClick="PassAendern"/>

        <Button
            android:id="@+id/BUTTONPASSWORD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/buttonbestaetigen"
            android:onClick="PassAendern"/>

    </LinearLayout>

</LinearLayout>