<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comschneeflockeivbaustellen_app_v2.github.baustellen_app_v2.MaterialErstellen"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#dddddd">

        <TextView
            android:id="@+id/MATERIALERSTELLEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#DDDDDD"
            android:background="#39424d"
            android:padding="10dp"
            android:text="@string/materialerstellen" />

        <EditText
            android:id="@+id/MATERIAL_NAME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/materialname"/>

        <EditText
            android:id="@+id/MATERIAL_ANZAHL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/materialanzahl"/>

        <EditText
            android:id="@+id/MATERIAL_EINZELPREIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/materialeinzelpreis"
            android:inputType="number"/>

        <LinearLayout
            android:id="@+id/BUTTONMATERIAL_ERSTELLEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/MATERIAL_BUTTON_ABBRECHEN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/buttonAbbrechen"
                android:onClick="clicked"/>

            <Button
                android:id="@+id/MATERIAL_BUTTON_ERSTELLEN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/buttonerstellen"
                android:onClick="clicked"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
